@@ -1,4 +1,3 @@
 @echo off
-copy swfupload.js ..\demos\swfupload_0015
-copy swfupload.swf  ..\demos\swfupload_0015
-pause
+copy swfupload.js ..\demos\swfupload
+copy swfupload.swf  ..\demos\swfupload
